CSS: Fix non clickable links behind active player

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -57,7 +57,7 @@ video {
   width: 100%;
   position: fixed;
   bottom: 0;
-  height: 100px;
+  height: 1px;
   z-index: 1000;
 }
 video::-webkit-media-controls-panel {
